--- a/src/client/global.scss
+++ b/src/client/global.scss
@@ -1,1 +1,11 @@
 @import "~bootstrap/scss/bootstrap";
+
+html, body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
+
+#root {
+    height: 100%;
+}
